--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Files from Vagrant
 .vagrant/
-
 composer.phar
+
+# Copied from /cms generated .gitignore
+
+# CakePHP specific files #
+##########################
+cms/config/app.php
+cms/config/.env
+cms/logs/*
+cms/tmp/*
+cms/vendor/*
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Tool specific files #
+#######################
+# Sass preprocessor
+.sass-cache/
